--- a/client/src/components/Profile/css/profile.css
+++ b/client/src/components/Profile/css/profile.css
@@ -1,65 +1,85 @@
-* {
+.profile * {
     font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", fontawesome;
     line-height: 1.4;
 }
-body {
-    background: url("http://127.0.0.1:3000/static/images/background.png") no-repeat center center fixed;
-    height: 100%;
+
+.profile {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height:100%;
+    background: url("http://127.0.1:3000/static/images/background.png") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-y:auto;
 }
 
-#avatar-input-field {
+.profile .title {
+    z-index: 2;
     display: flex;
-    width: 100px;
-    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;    
+    height: 64px;
+    border-bottom: 1px solid rgb(252, 193, 0);
+    background-color: #ffd54f;
+    align-items: center;
+    font-size: 60px;
+}
+
+.profile .logo-container {
+    display: flex;
+    width: 200px;
+    height:98%;
     margin: auto;
-    padding: 5px;
+    padding: 3px;
+    border-radius: 100px;
+    background: #fff8e1;
 }
 
-#user-fullname, #user-phonenumber, #user-birthday, #user-address {
-    cursor: text;
-    background: white;
+.profile .logo {
+    align-content: center;
+    height: 93%;
+    width: auto;
+    margin: auto;
 }
 
-#user-fullname:disabled, #user-phonenumber:disabled, #user-birthday:disabled, #user-address:disabled {
-    cursor: default;
-    background: rgba(158, 158, 158, 0.3);
+.profile .container {
+    z-index: 1;
+    display: block;
+    position: relative;
+    top: 70px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
+    height: 100%-70px;
 }
 
-.profile-sidebar {
+.profile .profile-sidebar {
     padding: 20px 0px 10px 0px;
     background: #fffde7;
     border: 1px solid #ffe082;
     margin: 0px 15px; 
 }
-.profile-content {
-    padding: 20px;
-    background: #fffde7;
-    border: 1px solid #ffe082;
-    margin-left: 15px;
-    margin-right: 15px; 
-    display: flex;
-    flex-direction: column;
-}
-.profile-user-avatar {
+
+.profile .profile-user-avatar {
     float: none;
     margin: 0 auto;
     width: 126px;
     height: 126px;
     border-radius: 50% !important;
 }
-.avatar {
-    height: 100%;
-    width: 100%;
-    display: block;
-}
-.profile-username {
+
+.profile .profile-username {
     text-align: center;
     color: #ff8f00;
     font-size: 16px;
@@ -67,12 +87,31 @@ body {
     margin-bottom: 7px;
     margin-top: 15px;
 }
-.nav {
+
+.profile #avatar-input-field {
+    display: flex;
+    width: 100px;
+    overflow: hidden;
+    margin: auto;
+    padding: 5px;
+}
+
+.profile .avatar {
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.profile .profile-menu {
+    margin-top: 30px;
+}
+
+.profile .nav {
     text-decoration: none;
     margin-top: 0;
     list-style-type: none;
 }
-ul {
+.profile ul {
     display: block;
     list-style-type: disc;
     margin-block-start: 1em;
@@ -81,73 +120,75 @@ ul {
     margin-inline-end: 0px;
     padding-inline-start: 0px;
 }
-.nav > li {
-    position: relative;
-    display: block;
-    padding: 10px 15px;
-}
-a {
-    text-decoration: none;
-}
-.profile-menu {
-    margin-top: 30px;
-}
-.profile-menu ul li.active {
+
+.profile .profile-menu ul li.active {
     color: #e65100;
     background-color: #ffecb3;
     border-left: 2px solid #ffb300;
     margin-left: -2px;
 }
-.profile-menu ul li {
+.profile .profile-menu ul li {
     color: #93a3b5;
     font-size: 14px;
     font-weight: 400;
 }
-a:hover {
-    color: #5b9bd1;
-}
-.cl-md-2 {
+
+.profile .nav > li {
     position: relative;
-    min-height: 1px;
+    display: block;
+    padding: 10px 15px;
 }
-.profile-title {
+
+.profile .profile-content {
+    padding: 20px;
+    background: #fffde7;
+    border: 1px solid #ffe082;
+    margin-left: 15px;
+    margin-right: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.profile .profile-title {
     text-align: center;
     font-weight: 400;
     margin: 0;
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
 }
-.info-bar {
+
+.profile .info-bar {
     display: block;
     min-height: 35px;
     margin-bottom: 5px;
 }
-.property {
+
+.profile .property {
     display: inline-block;
     max-width: 100%;
     font-weight: 700;
     text-align: right;
     padding: 6px;
 }
-h4 {
-    display: block;
-    width: 100%;
+
+.profile .input-field {
+    cursor: text;
+    background: white;
     padding: 6px 12px;
-    font-weight: 400;
-    margin: 0;
 }
-.description {
-    display: block;
-    max-width: 100%;
-    height: 100px;
-    border: 1px solid gray;
-    padding: 5px;
-    margin-top: 10px; 
+
+.profile .input-field:disabled{
+    cursor: default;
+    background: rgba(158, 158, 158, 0.3);
 }
-button {
+.profile .button {
+    text-align: center;
+}
+
+.profile button {
     background-color: #ffe36a;
     color: black;
     padding: 5px 10px;
-    margin-top: 30px; 
+    margin-top: 30px;
     margin-bottom: 0px;
     border: none;
     border-radius: 8px;
@@ -156,44 +197,29 @@ button {
     font-weight: bold;
     opacity: 0.9;
 }
-input {
-    padding: 6px 12px;
-}
-input:disabled {
-    cursor: not-allowed;
-}
-@media (max-width: 575px) {
-    .property {
-        text-align: left;
-    }
-    .profile-menu {
-        text-align: center;
-    }
-    button {
-        padding: 10px 20px;
-    }
-    body {
-        font-size: 13px;
-        overflow: scroll;
-    }
-
-}
 
 @media (min-width: 576px) {
-    body {
-        font-size: 13px;
-        overflow: scroll;
-    }
-    .profile-menu {
+    .profile .profile-menu {
         text-align: center;
     }
 }
 
 @media (min-width: 768px) {
-    .profile-content {
+    .profile .profile-content {
         height: 65%;
     }
-    body {
-        overflow: hidden;
+}
+
+@media (min-width: 1200px) {
+    .profile .title {
+        height: 96px;
+    }
+    .profile .logo-container {
+        width: 270px;
+        border-radius: 150px;
+    }
+    .profile .container {
+        max-width: 1170px;
+        top: 106px;
     }
 }
